# number_trainer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.original  Dockerfile.slim  GITHUB_SETUP.md  LICENSE  PROJECT_MEMORY.md  README.md  RELEASE_INSTRUCTIONS.md  TODO.md  Taskfile.yml  demo.py  docker-compose.prod.yml  docker-compose.yml  main.py  math_trainer.py  package-lock.json  package.json  pyproject.toml  release.sh  test_math_trainer.py  web_main.py
.claude/: settings.local.json
.cursor/rules/: testing.mdc
.github/workflows/: ci.yml  docker-build-test.yml  docker-publish.yml
changelog/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md
docs/: MOBILE_OPTIMIZATION.md  PROJECT_MEMORY.md  PWA_ICONS.md  PWA_TEST.md  PYTHON_3.13_MIGRATION_PLAN.md  TODO.md
src/number_trainer/: __init__.py
src/number_trainer/cli/: __init__.py  console.py
src/number_trainer/core/: __init__.py  models.py  trainer.py
src/number_trainer/gui/: __init__.py  app.py  styles.py
src/number_trainer/gui/widgets/: __init__.py
src/number_trainer/web/: __init__.py  app.py  main.py  models.py  production.py  routes.py
src/number_trainer/web/static/: manifest.json  sw.js
src/number_trainer/web/static/css/: style.css
src/number_trainer/web/static/js/: app.js
tests/: __init__.py
tests/integration/: test_docker_integration.py
tests/test_core/: test_trainer.py
tests/test_web/: __init__.py  test_api.py  test_models.py
utils/: generate_changelog.py  generate_pwa_icons.js
